<resources>
    <string name="app_name">Fitness App</string>
    <string name="signup">New user? Click this!</string>
    <string name="signuphere">New User? Click here to sign up!</string>
    <string name="welcome">Welcome Back!</string>
    <string name="userpersonalization">Welcome to user personilzation!</string>
    <string name="genderhint">Please select your gender from the options below</string>
    <string name="goalhint">Please select your goals from the options below</string>
    <string name="exphint">Please select your experience from the options below</string>
    <string name="agehint">Please enter your age</string>
    <string name="weighthint">Please enter your current weight</string>
    <string name="completepersonalization">I\'m all finished! Lets get started!</string>
    <string name="ageheight">Please enter your current height (inches)</string>
    <string name="agehintupdate">Happy Birthday! Enter new age</string>
    <string name="userpersonalizationupdate">Update your profile</string>
    <string name="weighthintupdate">Any weight changes. Update here (lbs)</string>
    <string name="ageheightupdate">Any height changes. Update here (inches)</string>
    <string name="genderhintupdate">Choose gender</string>
    <string name="goalhintupdate">Any goal changes? Update here</string>
    <string name="exphintupdate">Getting Easier? Change experience here</string>
    <string name="completepersonalizationupdate">I\'ve updated all my data! Let\'s get back to leveling up!</string>
    <string name="help">Help</string>
    <string name="workouts">Workouts</string>
    <string name="rankstatus">Ranks and Status</string>
    <string name="updateuser">Update User</string>
    <string name="creators">"This app was created by a group of Wilfrid Laurier University Students \n Coded by:\nGabriel Labayan\n Aya Khalaf \nBilal Asad"</string>
    <string name="helpactivity">Need Help?</string>
    <string name="instructions">1. Workout Activity is used to generate the personalized workout for the user \n2. The Rank activity is displays user progress \n3. The user personalization is used to update any user changes</string>

    <string name="gobacktomain">Go back to main menu</string>
    <string name="currentversion">Current Version: 1.1</string>
    <string name="gotologin">"Go back to user creation. "</string>
    <string name="signout">Click to logout</string>
    <string name="returntomain">Home</string>


    <string-array name="gender_options">
        <item>Male</item>
        <item>Female</item>
        <item>Non-binary</item>
        <item>Prefer not to say</item>
    </string-array>

    <string-array name="goal_options">
        <item>Lose weight</item>
        <item>Build muscle</item>
        <item>Increase strength</item>
        <item>Improve endurance</item>
        <item>General fitness</item>
    </string-array>

    <string-array name="experience_options">
        <item>Beginner</item>
        <item>Intermediate</item>
        <item>Advanced</item>
    </string-array>
</resources>