<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserPersonalization">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/userpersonalizationupdate"/>

    <EditText
        android:id="@+id/editAge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/agehintupdate"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@+id/title"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/editWeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/weighthintupdate"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/editAge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/editHeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/ageheightupdate"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@+id/editWeight"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/editGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/genderhintupdate"
        android:textStyle="bold"
        android:layout_gravity="center"
        app:layout_constraintTop_toBottomOf="@id/editHeight"
        android:layout_marginTop="30dp"/>



    <Spinner
        android:id="@+id/editspinnerGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/editGender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:entries="@array/gender_options"
        />

    <TextView
        android:id="@+id/goal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/goalhintupdate"
        android:textStyle="bold"
        android:layout_gravity="center"
        app:layout_constraintTop_toBottomOf="@id/editspinnerGender"
        android:layout_marginTop="30dp"/>

    <Spinner
        android:id="@+id/editSpinnerGoal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/goal"
        android:entries="@array/goal_options"
        />

    <TextView
        android:id="@+id/editExperience"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exphintupdate"
        android:textStyle="bold"
        android:layout_gravity="center"
        app:layout_constraintTop_toBottomOf="@id/editSpinnerGoal"
        android:layout_marginTop="30dp"/>

    <Spinner
        android:id="@+id/editSpinnerExperience"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/editExperience"
        android:entries="@array/experience_options"/>

    <Button
        android:id="@+id/userpersonalcontinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/completepersonalizationupdate"
        app:layout_constraintTop_toBottomOf="@id/editSpinnerExperience"/>

</androidx.constraintlayout.widget.ConstraintLayout>