<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserPersonalization">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/userpersonalization"/>

    <EditText
        android:id="@+id/age"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/agehint"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@+id/title"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/weighthint"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/age"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/genderhint"
        android:textStyle="bold"
        android:layout_gravity="center"
        app:layout_constraintTop_toBottomOf="@id/weight"
        android:layout_marginTop="30dp"/>



    <Spinner
        android:id="@+id/spinnerGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/gender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:entries="@array/gender_options"
        />

    <TextView
        android:id="@+id/goal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/goalhint"
        android:textStyle="bold"
        android:layout_gravity="center"
        app:layout_constraintTop_toBottomOf="@id/spinnerGender"
        android:layout_marginTop="30dp"/>

    <Spinner
        android:id="@+id/spinnerGoal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/goal"/>

    <TextView
        android:id="@+id/experience"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exphint"
        android:textStyle="bold"
        android:layout_gravity="center"
        app:layout_constraintTop_toBottomOf="@id/spinnerGoal"
        android:layout_marginTop="30dp"/>

    <Spinner
        android:id="@+id/spinnerExperience"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/experience"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/completepersonalization"
        app:layout_constraintTop_toBottomOf="@id/spinnerExperience"/>

</androidx.constraintlayout.widget.ConstraintLayout>